// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatastreamViewModalContent renders for download-only content 1`] = `
<DatastreamViewModalContent>
  <ForwardRef(DialogContent)
    sx={
      Object {
        "minHeight": "50vh",
      }
    }
  >
    <MuiDialogContentRoot
      className="MuiDialogContent-root"
      ownerState={
        Object {
          "children": <p>
            The MIME type 
            image/tiff
             cannot be displayed in your browser. Please
             
            <button
              onClick={[Function]}
            >
              download
            </button>
             the file instead.
          </p>,
          "dividers": false,
          "sx": Object {
            "minHeight": "50vh",
          },
        }
      }
      sx={
        Object {
          "minHeight": "50vh",
        }
      }
    >
      <Insertion
        cache={
          Object {
            "insert": [Function],
            "inserted": Object {
              "176wh8e-MuiCircularProgress-circle": true,
              "18lrjg1-MuiCircularProgress-root": true,
              "1idz92c-MuiCircularProgress-svg": true,
              "animation-1p2h4ri": true,
              "animation-61bdi0": true,
              "lebnmz-MuiDialogContent-root": true,
              "mx6d60-MuiDialogContent-root": true,
            },
            "key": "css",
            "nonce": undefined,
            "registered": Object {},
            "sheet": StyleSheet {
              "_alreadyInsertedOrderInsensitiveRule": true,
              "_insertTag": [Function],
              "before": null,
              "container": <head>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-mx6d60-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-mx6d60-MuiDialogContent-root{padding-top:0;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-18lrjg1-MuiCircularProgress-root{display:inline-block;color:#1976d2;-webkit-animation:animation-61bdi0 1.4s linear infinite;animation:animation-61bdi0 1.4s linear infinite;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-1idz92c-MuiCircularProgress-svg{display:block;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-176wh8e-MuiCircularProgress-circle{stroke:currentColor;stroke-dasharray:80px,200px;stroke-dashoffset:0;-webkit-animation:animation-1p2h4ri 1.4s ease-in-out infinite;animation:animation-1p2h4ri 1.4s ease-in-out infinite;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-lebnmz-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-lebnmz-MuiDialogContent-root{padding-top:0;}
                </style>
              </head>,
              "ctr": 11,
              "insertionPoint": undefined,
              "isSpeedy": false,
              "key": "css",
              "nonce": undefined,
              "prepend": undefined,
              "tags": Array [
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-mx6d60-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-mx6d60-MuiDialogContent-root{padding-top:0;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-18lrjg1-MuiCircularProgress-root{display:inline-block;color:#1976d2;-webkit-animation:animation-61bdi0 1.4s linear infinite;animation:animation-61bdi0 1.4s linear infinite;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-1idz92c-MuiCircularProgress-svg{display:block;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-176wh8e-MuiCircularProgress-circle{stroke:currentColor;stroke-dasharray:80px,200px;stroke-dashoffset:0;-webkit-animation:animation-1p2h4ri 1.4s ease-in-out infinite;animation:animation-1p2h4ri 1.4s ease-in-out infinite;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-lebnmz-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-lebnmz-MuiDialogContent-root{padding-top:0;}
                </style>,
              ],
            },
          }
        }
        isStringTag={true}
        serialized={
          Object {
            "map": undefined,
            "name": "lebnmz-MuiDialogContent-root",
            "next": undefined,
            "styles": "label:MuiDialogContent-root;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;.MuiDialogTitle-root + &{padding-top:0;}min-height:50vh;",
            "toString": [Function],
          }
        }
      />
      <div
        className="MuiDialogContent-root css-lebnmz-MuiDialogContent-root"
      >
        <p>
          The MIME type 
          image/tiff
           cannot be displayed in your browser. Please
           
          <button
            onClick={[Function]}
          >
            download
          </button>
           the file instead.
        </p>
      </div>
    </MuiDialogContentRoot>
  </ForwardRef(DialogContent)>
</DatastreamViewModalContent>
`;

exports[`DatastreamViewModalContent renders for viewable content 1`] = `
<DatastreamViewModalContent>
  <ForwardRef(DialogContent)
    sx={
      Object {
        "minHeight": "50vh",
      }
    }
  >
    <MuiDialogContentRoot
      className="MuiDialogContent-root"
      ownerState={
        Object {
          "children": <Unknown
            data="test1"
            mimeType="test2"
          />,
          "dividers": false,
          "sx": Object {
            "minHeight": "50vh",
          },
        }
      }
      sx={
        Object {
          "minHeight": "50vh",
        }
      }
    >
      <Insertion
        cache={
          Object {
            "insert": [Function],
            "inserted": Object {
              "176wh8e-MuiCircularProgress-circle": true,
              "18lrjg1-MuiCircularProgress-root": true,
              "1idz92c-MuiCircularProgress-svg": true,
              "animation-1p2h4ri": true,
              "animation-61bdi0": true,
              "lebnmz-MuiDialogContent-root": true,
              "mx6d60-MuiDialogContent-root": true,
            },
            "key": "css",
            "nonce": undefined,
            "registered": Object {},
            "sheet": StyleSheet {
              "_alreadyInsertedOrderInsensitiveRule": true,
              "_insertTag": [Function],
              "before": null,
              "container": <head>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-mx6d60-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-mx6d60-MuiDialogContent-root{padding-top:0;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-18lrjg1-MuiCircularProgress-root{display:inline-block;color:#1976d2;-webkit-animation:animation-61bdi0 1.4s linear infinite;animation:animation-61bdi0 1.4s linear infinite;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-1idz92c-MuiCircularProgress-svg{display:block;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-176wh8e-MuiCircularProgress-circle{stroke:currentColor;stroke-dasharray:80px,200px;stroke-dashoffset:0;-webkit-animation:animation-1p2h4ri 1.4s ease-in-out infinite;animation:animation-1p2h4ri 1.4s ease-in-out infinite;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-lebnmz-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;}
                </style>
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-lebnmz-MuiDialogContent-root{padding-top:0;}
                </style>
              </head>,
              "ctr": 11,
              "insertionPoint": undefined,
              "isSpeedy": false,
              "key": "css",
              "nonce": undefined,
              "prepend": undefined,
              "tags": Array [
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-mx6d60-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-mx6d60-MuiDialogContent-root{padding-top:0;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-18lrjg1-MuiCircularProgress-root{display:inline-block;color:#1976d2;-webkit-animation:animation-61bdi0 1.4s linear infinite;animation:animation-61bdi0 1.4s linear infinite;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-61bdi0{0%{-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-1idz92c-MuiCircularProgress-svg{display:block;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-176wh8e-MuiCircularProgress-circle{stroke:currentColor;stroke-dasharray:80px,200px;stroke-dashoffset:0;-webkit-animation:animation-1p2h4ri 1.4s ease-in-out infinite;animation:animation-1p2h4ri 1.4s ease-in-out infinite;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @-webkit-keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  @keyframes animation-1p2h4ri{0%{stroke-dasharray:1px,200px;stroke-dashoffset:0;}50%{stroke-dasharray:100px,200px;stroke-dashoffset:-15px;}100%{stroke-dasharray:100px,200px;stroke-dashoffset:-125px;}}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .css-lebnmz-MuiDialogContent-root{-webkit-flex:1 1 auto;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;min-height:50vh;}
                </style>,
                <style
                  data-emotion="css"
                  data-s=""
                >
                  
                  .MuiDialogTitle-root+.css-lebnmz-MuiDialogContent-root{padding-top:0;}
                </style>,
              ],
            },
          }
        }
        isStringTag={true}
        serialized={
          Object {
            "map": undefined,
            "name": "lebnmz-MuiDialogContent-root",
            "next": undefined,
            "styles": "label:MuiDialogContent-root;flex:1 1 auto;-webkit-overflow-scrolling:touch;overflow-y:auto;padding:20px 24px;.MuiDialogTitle-root + &{padding-top:0;}min-height:50vh;",
            "toString": [Function],
          }
        }
      />
      <div
        className="MuiDialogContent-root css-lebnmz-MuiDialogContent-root"
      >
        <Component
          data="test1"
          mimeType="test2"
        >
          DatatypeContent
        </Component>
      </div>
    </MuiDialogContentRoot>
  </ForwardRef(DialogContent)>
</DatastreamViewModalContent>
`;
